crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{| id="tbl" class="wikitable fancy" data-key="value"
|+ Captioned and attributed
|-
! h1
! h2
|- class="odd"
| id="cell-id"| a
| b
|}
