crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-caption-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|+ First caption paragraph

Second caption paragraph
|-
! h
|-
| v
|}
