crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-caption-div.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|+ <div>
Table caption

</div>
|-
| a
| b
|}
