crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|+ A caption for the table
|-
! h
|-
| v
|}
