crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-cell-blank.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|-
! left
! right
|-
| x
|
|-
|
| y
|}
