crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-cell-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|-
! name
! notes
|-
| alpha
| first paragraph

* one
* two
|}
