crates/carta/tests/snapshots/golden_writer__mediawiki__table__table-cell-linebreak.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
{| class="wikitable"
|-
! product
! note
|-
| multi<br />
line cell
| plain
|}
